--- a/projects/movies-frontend/src/app/features/admin/movie-create/movie-create.component.html
+++ b/projects/movies-frontend/src/app/features/admin/movie-create/movie-create.component.html
@@ -20,11 +20,13 @@
         >
       </mat-option>
     </mat-autocomplete>
+    <app-input-errors *ngIf="movieForm.get('title')?.dirty" [errors]="movieForm.get('title')?.errors"></app-input-errors>
   </div>
 
   <div>
     <mat-label>Director</mat-label>
     <input appInput formControlName="director" />
+    <app-input-errors *ngIf="movieForm.get('director')?.dirty" [errors]="movieForm.get('director')?.errors"></app-input-errors>
   </div>
 
   <div>
@@ -37,6 +39,7 @@
       matSuffix
       [for]="releaseDatePicker"></mat-datepicker-toggle>
     <mat-datepicker #releaseDatePicker></mat-datepicker>
+    <app-input-errors *ngIf="movieForm.get('releaseDate')?.dirty" [errors]="movieForm.get('releaseDate')?.errors"></app-input-errors>
   </div>
 
   <!-- <div>
@@ -56,8 +59,10 @@
   <div>
     <mat-label>Description</mat-label>
     <textarea appInput formControlName="description"></textarea>
+    <app-input-errors *ngIf="movieForm.get('description')?.dirty" [errors]="movieForm.get('description')?.errors"></app-input-errors>
   </div>
 
+  <!-- TODO: Make it regular control -->
   <app-image-upload
     (imageSelected)="onImageSelected($event)"
     [inputImageFile]="posterFile"></app-image-upload>
