--- a/projects/movies-frontend/src/app/features/movies/movie-details/movie-details.component.html
+++ b/projects/movies-frontend/src/app/features/movies/movie-details/movie-details.component.html
@@ -40,40 +40,43 @@
   </div>
   <div class="mt-8">
     <h3 class="text-2xl font-semibold mb-4">Add Review:</h3>
-    <form>
+    <form [formGroup]="reviewForm">
       <div class="mb-4">
         <label class="block mb-2 font-semibold" for="review-title">Title</label>
         <input
           id="review-title"
-          class="w-full px-4 py-2 border rounded-md"
-          [(ngModel)]="review.title"
-          name="title"
+          appInput
+          formControlName="title"
         />
+        <app-input-errors *ngIf="reviewForm.get('title')?.dirty" [errors]="reviewForm.get('title')?.errors"></app-input-errors>
       </div>
 
       <div class="mb-4">
         <label class="block mb-2 font-semibold" for="review-rating">Rating</label>
         <input
           id="review-rating"
-          class="w-full px-4 py-2 border rounded-md"
+          appInput
           type="number"
-          [(ngModel)]="review.rating"
-          name="rating"
+          formControlName="rating"
         />
+        <app-input-errors *ngIf="reviewForm.get('rating')?.dirty" [errors]="reviewForm.get('rating')?.errors"></app-input-errors>
+
       </div>
 
       <div class="mb-4">
         <label class="block mb-2 font-semibold" for="review-body">Body</label>
         <textarea
           id="review-body"
-          class="w-full px-4 py-2 border rounded-md"
-          [(ngModel)]="review.body"
-          name="body"
+          appInput
+          formControlName="body"
         ></textarea>
+        <app-input-errors *ngIf="reviewForm.get('body')?.dirty" [errors]="reviewForm.get('body')?.errors"></app-input-errors>
+
       </div>
-      <div class="submit-button">
+      <div>
         <button
-          class="bg-primary-500 text-white py-2 px-4 rounded-md"
+          appButton
+          [disabled]="reviewForm.invalid"
           (click)="addReview()"
         >
           Add Review
