--- a/projects/movies-frontend/src/app/features/movies/movie-list/movie-list.component.html
+++ b/projects/movies-frontend/src/app/features/movies/movie-list/movie-list.component.html
@@ -10,7 +10,7 @@
     </mat-form-field>
   </div>
 
-  <div class="flex flex-wrap">
+  <div class="flex flex-wrap gap-5">
     <app-movie-card
   *ngFor="let movie of displayedMovies$ | async; trackBy: trackById"
   [movie]="movie"
