--- a/projects/movies-frontend/src/app/shared/components/movie-card/movie-card.component.html
+++ b/projects/movies-frontend/src/app/shared/components/movie-card/movie-card.component.html
@@ -5,7 +5,7 @@
       (error)="onImageError($event)"
       class="w-full h-64 object-cover object-center mb-6 rounded-md"
     />
-    <h2 class="text-xl font-bold mb-2">{{ movie.title }}</h2>
+    <h2 class="text-xl font-bold mb-2" [title]="movie.title">{{ movie.title | truncate }}</h2>
     <h3 class="text-gray-600 font-semibold mb-6">Directed by: {{ movie.director }}</h3>
     <div>
       <p class="text-gray-700 mb-4">
