refactor(forms): make image upload a control

--- a/projects/movies-frontend/src/app/features/admin/movie-create/movie-create.component.html
+++ b/projects/movies-frontend/src/app/features/admin/movie-create/movie-create.component.html
@@ -60,8 +60,8 @@
 
   <!-- TODO: Make it regular control -->
   <app-image-upload
-    (imageSelected)="onImageSelected($event)"
-    [inputImageFile]="posterFile"></app-image-upload>
+    [formControl]="posterControl"
+   ></app-image-upload>
 
   <button
     appButton
