refactor(ui-components): replace form-field and button to library

--- a/projects/movies-frontend/src/app/features/admin/movie-bulk-add/movie-bulk-add.component.html
+++ b/projects/movies-frontend/src/app/features/admin/movie-bulk-add/movie-bulk-add.component.html
@@ -1,9 +1,9 @@
 <div>
   <h2>Add Movies</h2>
-  <div>
+  <ts-form-field>
     <label>Movie titles (one per line)</label>
     <textarea [formControl]="movieTitlesControl"  appInput ></textarea>
-  </div>
+  </ts-form-field>
   <button appButton  [disabled]="movieTitlesControl.invalid"  (click)="findSuggestions()">
     Find Suggestions
   </button>
