--- a/projects/movies-frontend/src/app/features/movies/movie-details/movie-details.component.html
+++ b/projects/movies-frontend/src/app/features/movies/movie-details/movie-details.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="movie$ | async as movie">
+<div *ngIf="movie$ | async as movie" class="w-3/4 mx-auto my-4">
   <div class="flex">
     <div class="movie-poster w-1/3">
       <img
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <div class="mt-8">
+  <div class="mt-8" *ngIf="(reviews$ | async)?.length">
     <h3 class="text-2xl font-semibold mb-4">Reviews:</h3>
     <div class="">
       <div
