refactor(form-field): refactor input directive

--- a/projects/movies-frontend/src/app/features/admin/movie-bulk-add/movie-bulk-add.component.html
+++ b/projects/movies-frontend/src/app/features/admin/movie-bulk-add/movie-bulk-add.component.html
@@ -2,7 +2,7 @@
   <h2>Add Movies</h2>
   <ts-form-field>
     <label>Movie titles (one per line)</label>
-    <textarea [formControl]="movieTitlesControl"  appInput ></textarea>
+    <textarea [formControl]="movieTitlesControl" ></textarea>
   </ts-form-field>
   <button appButton  [disabled]="movieTitlesControl.invalid"  (click)="findSuggestions()">
     Find Suggestions
