--- a/projects/movies-frontend/src/app/features/movies/movie-details/movie-details.component.html
+++ b/projects/movies-frontend/src/app/features/movies/movie-details/movie-details.component.html
@@ -42,25 +42,23 @@
     <h3 class="text-2xl font-semibold mb-4">Add Review:</h3>
     <form [formGroup]="reviewForm">
       <ts-form-field class="mb-4">
-        <label #label class="block mb-2 font-semibold" for="review-title">Title</label>
+        <label   class="block mb-2 font-semibold" for="review-title">Title</label>
         <input
           id="review-title"
-          appInput
           formControlName="title"
         />
       </ts-form-field>
 
-      <ts-form-field class="mb-4">
+      <div class="mb-4">
         <label class="block mb-2 font-semibold" for="review-rating">Rating</label>
         <app-stars-rating formControlName="rating"></app-stars-rating>
 
-      </ts-form-field>
+      </div>
 
       <ts-form-field class="mb-4">
         <label class="block mb-2 font-semibold" for="review-body">Body</label>
         <textarea
           id="review-body"
-          appInput
           formControlName="body"
         ></textarea>
 
