--- a/projects/movies-frontend/src/app/shared/components/movie-card/movie-card.component.html
+++ b/projects/movies-frontend/src/app/shared/components/movie-card/movie-card.component.html
@@ -3,7 +3,7 @@
       [src]="'http://localhost:3000/' + movie.poster"
       alt="{{ movie.title }} poster"
       (error)="onImageError($event)"
-      class="w-full h-64 object-cover object-center mb-6 rounded-md"
+      class="w-full h-[600px] object-cover object-center mb-6 rounded-md"
     />
     <h2 class="text-xl font-bold mb-2" [title]="movie.title">{{ movie.title | truncate }}</h2>
     <h3 class="text-gray-600 font-semibold mb-6">Directed by: {{ movie.director }}</h3>
@@ -24,11 +24,6 @@
       </div>
     </div>
     <div class="mt-4">
-      <button
-        class="bg-primary-500 text-white py-2 px-4 rounded-md"
-        [routerLink]="['/movies/details', movie.id]"
-      >
-        View Details
-      </button>
+      <ng-content></ng-content>
     </div>
   </div>
